<resources>
    <string name="app_name">Aggro</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="name_copywrite">copyright by App.Dynamo.Tech Solutions Ltd.</string>

    <!-- Banner Ads ID -->
    <string name="banner_id">ca-app-pub-5752152437329746/5264606119</string>

    <!-- Hints Commands for Signin Screen -->
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="location">Location</string>
    <string name="email">E-mail address</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_here">New here?Sign Up</string>

    <!-- Drawer Items -->
    <string name="drawer_item_compact_header">My Library</string>
    <string name="drawer_item_action_bar">My Details</string>
    <string name="drawer_item_multi_drawer">Favourites</string>
    <string name="drawer_item_section_header"></string>
    <string name="drawer_item_settings">Settings</string>
    <string name="drawer_item_help">Help Feedback</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sample_show_log">Show Log</string>
    <string name="sample_hide_log">Hide Log</string>

    <string name="app_menu">Menu</string>
    <string name="app_library">App</string>
    <string name="app_cat">Category</string>
    <string name="app_fav">Favourite</string>

    <string-array name="tabs">
        <item>App</item>
        <item>Category</item>
        <item>Favourite</item>
    </string-array>

    <!-- TODO: Ctaegory Item List -->
    <string name="cat_all_apps">APPS</string>
    <string name="cat_bussiness">BUSINESS</string>
    <string name="cat_lifestyle">LIFESTYLE</string>
    <string name="cat_news">NEWS_AND_MAGAZINES</string>
    <string name="cat_education">EDUCATION</string>
    <string name="cat_transporation">TRANSPORTATION</string>
    <string name="cat_productiity">PRODUCTIVITY</string>
    <string name="cat_games">GAMES</string>
    <string name="cat_travel">TRAVEL_AND_LOCAL</string>
    <string name="cat_sports">SPORTS</string>
    <string name="cat_health">HEALTH_AND_FITNESS</string>
    <string name="cat_entertainment">MUSIC_AND_AUDIO</string>
    <string name="cat_comics">COMICS</string>
    <string name="cat_communication">COMMUNICATION</string>
    <string name="cat_finance">FINANCE</string>
    <string name="cat_media_video">MEDIA_AND_VIDEO</string>
    <string name="cat_medical">MEDICAL</string>
    <string name="cat_personilazation">PERSONALIZATION</string>
    <string name="cat_photography">PHOTOGRAPHY</string>
    <string name="cat_shopping">SHOPPING</string>
    <string name="cat_social">SOCIAL</string>
    <string name="cat_tool">TOOLS</string>
    <string name="cat_wheather">WEATHER</string>
    <string name="cat_lib_demo">LIBRARIES_AND_DEMO</string>
    <string name="cat_game_arcade">GAME_ARCADE</string>
    <string name="cat_game_puzzle">GAME_PUZZLE</string>
    <string name="cat_game_card">GAME_CARD</string>
    <string name="cat_game_casual">GAME_CASUAL</string>
    <string name="cat_game_racing">GAME_RACING</string>
    <string name="cat_game_sport">GAME_SPORTS</string>
    <string name="cat_game_action">GAME_ACTION</string>
    <string name="cat_game_adventure">GAME_ADVENTURE</string>
    <string name="cat_game_board">GAME_BOARD</string>
    <string name="cat_game_casino">GAME_CASINO</string>
    <string name="cat_game_educational">GAME_EDUCATIONAL</string>
    <string name="cat_game_family">GAME_FAMILY</string>
    <string name="cat_game_music">GAME_MUSIC</string>
    <string name="cat_game_role_playing">GAME_ROLE_PLAYING</string>
    <string name="cat_game_simulation">GAME_SIMULATION</string>
    <string name="cat_game_strategy">GAME_STRATEGY</string>
    <string name="cat_game_trivia">GAME_TRIVIA	</string>
    <string name="cat_game_word">GAME_WORD</string>
    <string name="cat_app_wallpaper">APP_WALLPAPER</string>
    <string name="cat_app_widget">APP_WIDGETS</string>
    <string name="cat_pick_recomendation">Pick place \u0026 recommendation</string>
    <string name="cat_recomendation">Recommendation</string>

    <!-- TODO: Ctaegory GAME -->
    <string name="name_one">Subway Sutfer</string>
    <string name="name_two">Hill Climbing</string>
    <string name="name_three">Mountain Rock</string>

    <!-- TODO: Spiiner array -->

    <string name="spinner_prompt">Gender</string>
    <string name="spinner_m">M</string>
    <string name="spinner_f">F</string>

    <string-array name="spinner_aray">
        <item>M</item>
        <item>F</item>
    </string-array>

    <!-- TODO: Error Message for Registration screen -->
     <string name="name_err_msg">please enter your name.</string>
     <string name="uname_err_msg">please enter your user name.</string>
     <string name="age_err_msg">please enter your user age</string>
     <string name="gender_err_msg">please select your gender</string>
    <string name="email_err_msg">please enter your Email</string>
    <string name="email_err_val_msg">please enter valid Email</string>

    <!-- TODO: VIEW Pager page title -->
    <string name="view_pager_apps">Apps</string>
    <string name="view_pager_category">Categories</string>
    <string name="view_pager_fav">Favourites</string>

    <!-- TODO: My Detail Fragement string -->
    <string name="my_detail_hi">Hi</string>
    <string name="my_detail_age">Age :</string>
    <string name="my_detail_gender">Gender :</string>
    <string name="my_detail_location">Location :</string>
    <string name="my_detail_email">Email :</string>
    <string name="my_detail_update">Update</string>

    <!-- TODO: Access token -->
    <string name="aggro_access_token">87a19171d594626c1ecdb84e198bb20941a58697</string>

    <!-- TODO: Volley error helper -->
    <string name="no_network_connection" translatable="false">No network connection found</string>
    <string name="generic_server_down" translatable="false">Server down</string>
    <string name="generic_server_timeout" translatable="false">Server Timeout</string>
    <string name="generic_error" translatable="false">No internet</string>
    <string name="no_internet" translatable="false">No internet</string>
    <string name="parsing_failed" translatable="false">Parsing Failure</string>
    <string name="auth_failed" translatable="false">Authentication Failure</string>
    
    <!--TODO:Shared Prefrences Detail-->
    <string name="aggro_prefs">AGGRO_PREFS</string>
    <string name="aggro_prefs_package_name">AGGRO_PREFS_PACKAGE</string>
    <string name="aggro_downloaded_app_name">AGGRO_DOWNLOADED_APP_NAME</string>
    <string name="aggro_downloaded_app_category">AGGRO_DOWNLOADED_APP_CATEGORY</string>
    <string name="aggro_downloaded_app_market_url">AGGRO_DOWNLOADED_APP_MARKET_URL</string>
    <string name="aggro_downloaded_app_icon_url">AGGRO_DOWNLOADED_APP_ICON_URL</string>
    <string name="aggro_is_app_downloaded">IS_DOWNLOADED</string>
    <string name="aggro_app_rating">APP_RATING</string>
    <string name="aggro_search">Enter the name of the app you are looking for</string>

    <!--TODO:DOWNLOAD -->
    <string name="download_failed">Download failed</string>

    <!--TODO:CUSTOM CATEGORY DIALOG TEXT
    -->
    <string name="custome_cat_header_dialog">C-Category</string>
    <string name="custome_cat_name">Name</string>
    <string name="custome_create_button">Create</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="prefs_fragement_stats">prefs_fragement</string>
    
    <string name="remove_dwn_app">Remove download Apps</string>
    <string name="new_to_aggro">New to aggro learn the basic</string>
    <string name="read_book">Read book on your mobile devices</string>
    <string name="disable_enable_app">Disable and enable Aggro apps</string>
    <string name="subsribe_on_aggro">Subscribe on aggro</string>

    <!--TODO:SETTINGS SCREEN
    -->

    <string name="setting_show_notification">Show notifications</string>
    <string name="setting_show_notify">Notify When new App is avilable</string>
    <string name="settings_dwnld">Downloading</string>
    <string name="settings_dwnld_wifi_only">Download via wifi only</string>
    <string name="settings_dwnld_wifi_info">To reduce carrier data charges, download download over mobile network</string>
    <string name="settings_dwnld_charging_only">Download via charging only</string>
    <string name="settings_dwnld_charginf_info">To reduce battery usage, download only when charging</string>
    <string name="settings_about">About</string>
    <string name="settings_open_source_licence">Open source licence</string>
    <string name="legal_info_about_licence">Legal information about licenses</string>
    <string name="settings_terms">Terms of service</string>
    <string name="settings_privacy">Privacy policy</string>
    <string name="settings_usage">Usage policy</string>
    <string name="settings_usage_desc">Aggro is for presonal and non-commericial use only </string>
    <string name="settings_aggro">Aggro</string>
    <string name="settings_aggro_version">Version 1.0</string>

    <!--TODO:PICK AND RECOMMENDATION SCREEN
    -->
    
    <string name="choose_place_type">Select Place type and get recommended app</string>

    <!--TODO:Parse-->
    <string name="app_hq_app_id">3f5d8c696ef4f23d51a53284e3b502c11b8c251fe186a7f8f09bfa0c9c3ddabb</string>
    <string name="app_hq_client_key">52ec18c784e005c6c93f28e3f4e51f8e9e6aa190bf6a9372366a07fb2abc2eba</string>
    <string name="google_project_number">229356881953</string>
    
    <!--TODO HELP & RECOMMENDATION-->
    <string-array name="pick_recommendation_array">
        <item>Airport</item>
        <item>Hospital</item>
        <item>Amusement park</item>
        <item>ATM</item>
        <item>Art Gallery</item>
        <item>Bakery</item>
        <item>Library</item>
        <item>Bank</item>
        <item>Bar</item>
        <item>Beauty Salon</item>
        <item>Lodging</item>
        <item>Book Store</item>
        <item>Meal Takeaway</item>
        <item>Movie Rental</item>
        <item>Car Dealer</item>
        <item>Night Club</item>
        <item>park</item>
        <item>Food</item>
    </string-array>
    
</resources>
